# cuoricino

./: LifeV_config.h.in  NEWS.md  PackagesList.cmake  Version.cmake
doc/manual/: cavity.tex
examples/example_heart/: data  heart.cpp
examples/example_integratedHeart/: Makefile.am  boundaryConditions.hpp  data  dataGI  flowConditions.cpp  flowConditions.hpp  integratedHeart.cpp  ud_functions.cpp  ud_functions.hpp
examples/example_steadyFSIinitialization/: boundaryConditions.hpp
life/lifefem/: AssemblyElementalActiveStructure.cpp  AssemblyElementalActiveStructure.hpp
life/lifesolver/: HeartFunctors.cpp  HeartFunctors.hpp  HeartIonicData.cpp  HeartIonicData.hpp  HeartIonicSolver.hpp  NeoHookeanActivatedMaterial.hpp  StructuralMaterial.hpp
lifev/bc_interface/core/: CMakeLists.txt
lifev/core/: CMakeLists.txt
lifev/core/algorithm/: CMakeLists.txt  LinearSolver.cpp  LinearSolver.hpp  MatrixStandardSolver.cpp  MatrixStandardSolver.hpp  NonLinearRichardson.hpp
lifev/core/array/: CMakeLists.txt  GhostHandler.hpp  MapEpetra.cpp  MapEpetra.hpp  MatrixEpetra.hpp  MatrixEpetraStructured.hpp  MatrixEpetraStructuredUtility.hpp  MatrixLU.cpp  MatrixLU.hpp  MatrixSmall.hpp  MatrixStandard.cpp  MatrixStandard.hpp  VectorEpetra.cpp  VectorEpetra.hpp  VectorEpetraStructured.cpp  VectorEpetraStructured.hpp  VectorLU.cpp  VectorLU.hpp  VectorStandard.cpp  VectorStandard.hpp
lifev/core/fem/: BCManage.hpp  BCManageNormal.hpp  CMakeLists.txt  DOF.hpp  FEDefinitions.cpp  FESpace.hpp  QuadratureRule.hpp  ROS3P.cpp  ROS3P.hpp  RosenbrockTransformed.cpp  RosenbrockTransformed.hpp  TimeAdvance.hpp  TimeAdvanceBDF.hpp  TimeAdvanceNewmark.hpp
lifev/core/filter/: ExporterHDF5.hpp  ExporterHDF5Mesh3D.hpp  PartitionIO.hpp
lifev/core/function/: CMakeLists.txt  Norm.cpp  Norm.hpp
lifev/core/interpolation/: RBFInterpolation.hpp  RBFhtp.hpp  RBFhtpVectorial.hpp  RBFlocallyRescaledScalar.hpp  RBFlocallyRescaledVectorial.hpp  RBFrescaledScalar.hpp  RBFrescaledVectorial.hpp  RBFscalar.hpp  RBFvectorial.hpp
lifev/core/mesh/: CMakeLists.txt  MeshData.hpp  MeshLoadingUtility.hpp  MeshPartitioner.hpp  MeshTransformer.hpp  MeshUtility.cpp  MeshUtility.hpp  MeshVertex.hpp  RegionMesh.hpp  RegionMesh1DStructured.hpp  RegionMesh2DStructured.hpp  RegionMesh3DStructured.hpp  RegionMeshStructured.hpp  UpdateMeshFacetsRidges.hpp
lifev/core/operator/: AztecooOperator.cpp  AztecooOperator.hpp  BelosOperator.cpp  BelosOperator.hpp  SolverOperator.cpp  SolverOperator.hpp
lifev/core/solver/: HyperbolicSolver.hpp
lifev/core/testsuite/: CMakeLists.txt
lifev/core/util/: CMakeLists.txt  HeartUtility.hpp
lifev/electrophysiology/: CMakeLists.txt
lifev/electrophysiology/examples/: CMakeLists.txt
lifev/electrophysiology/solver/: CMakeLists.txt  ElectroAlievPanfilov.hpp  ElectroBidomainSolver.hpp  ElectroETABidomainSolver.hpp  ElectroETAMonodomainSolver.hpp  ElectroFunctors.cpp  ElectroFunctors.hpp  ElectroIonicData.cpp  ElectroIonicData.hpp  ElectroIonicSolver.hpp  ElectroLuoRudy.hpp  ElectroMonodomainData.cpp  ElectroMonodomainSolver.hpp  StimulationProtocol.cpp  StimulationProtocol.hpp
lifev/electrophysiology/solver/Deprecated/: ElectroBidomainData.cpp  ElectroBidomainData.hpp  ElectroBidomainSolver.hpp  ElectroLuoRudy.hpp  ElectroMonodomainData.hpp  ElectroMonodomainSolver.hpp  ElectroUpdatedMonodomainSolver.hpp
lifev/electrophysiology/solver/IonicModels/: CMakeLists.txt  ElectroIonicModel.cpp  ElectroIonicModel.hpp  IntracellularCalciumGoldbeter.cpp  IntracellularCalciumGoldbeter.hpp  IonicAlievPanfilov.cpp  IonicAlievPanfilov.hpp  IonicFitzHughNagumo.cpp  IonicFitzHughNagumo.hpp  IonicFox.cpp  IonicFox.hpp  IonicGoldbeter.cpp  IonicGoldbeter.hpp  IonicHodgkinHuxley.cpp  IonicHodgkinHuxley.hpp  IonicJafriRiceWinslow.cpp  IonicJafriRiceWinslow.hpp  IonicLuoRudyI.cpp  IonicLuoRudyI.hpp  IonicLuoRudyII.hpp  IonicMinimalModel.cpp  IonicMinimalModel.hpp  IonicMitchellSchaeffer.cpp  IonicMitchellSchaeffer.hpp  IonicNoblePurkinje.cpp  IonicNoblePurkinje.hpp  IonicTenTusscher.cpp  IonicTenTusscher.hpp  IonicTenTusscher06.cpp  IonicTenTusscher06.hpp  IonicTenTusscherFE.cpp  IonicTenTusscherFE.hpp  JafriRiceWinslow.hpp
lifev/electrophysiology/solver/XbModels/: CMakeLists.txt  ElectroXbModel.hpp  XbNegroniLascano96.hpp  XbNegroniLascano96TTJRW.hpp
lifev/electrophysiology/stimulus/: CMakeLists.txt  CardiacStimulusPMJ.hpp  CardiacStimulusPacingProtocol.cpp  ElectroStimulus.cpp  StimulusPMJ.cpp  StimulusPacingProtocol.cpp  StimulusPacingProtocol.hpp  StimulusSingleSource.hpp
lifev/electrophysiology/testsuite/: CMakeLists.txt
lifev/electrophysiology/util/: CMakeLists.txt  CardiacStimulus.cpp  CardiacStimulus.hpp  CardiacStimulusPMJ.cpp  CardiacStimulusPMJ.hpp  CardiacStimulusPacingProtocol.cpp  CardiacStimulusPacingProtocol.hpp  CardiacStimulusSingleSource.cpp  CardiacStimulusSingleSource.hpp  ElectrophysiologyUtility.hpp  HeartUtility.hpp
lifev/em/: CMakeLists.txt
lifev/em/cmake/: Dependencies.cmake
lifev/em/examples/: CMakeLists.txt
lifev/em/solver/: ActiveStructuralConstitutiveLaw.hpp  CMakeLists.txt  EMActiveStrainSolver.hpp  EMActiveStructuralConstitutiveLaw.hpp  EMETAFunctors.hpp  EMEvaluate.hpp  EMGeneralizedActiveHolzapfelOgdenMaterial.hpp  (+7 more)
lifev/heart/: CMakeLists.txt
lifev/heart/solver/IonicModels/: CMakeLists.txt  HeartIonicModel.cpp  HeartIonicModel.hpp  IonicAlievPanfilov.cpp  IonicAlievPanfilov.hpp  IonicFitzHughNagumo.cpp  IonicFitzHughNagumo.hpp  IonicJafriRiceWinslow.cpp  IonicJafriRiceWinslow.hpp  IonicLuoRudyII.hpp  IonicMinimalModel.cpp  IonicMinimalModel.hpp  IonicMitchellSchaeffer.cpp  IonicMitchellSchaeffer.hpp  IonicTenTusscher.cpp  IonicTenTusscher.hpp
lifev/heart/solver/XbModels/: CMakeLists.txt  HeartXbModel.hpp  XbNegroniLascano96.hpp
lifev/heart/utility/: CMakeLists.txt  HeartUtility.hpp
lifev/toolkit/: CMakeLists.txt
testsuite/: Makefile.am  testsuite.at
(+614 files in other folders)
