SET(solver_HEADERS
  solver/HeartUtility.hpp
CACHE INTERNAL "")


SET(LOCAL_HEADERS)
FOREACH(INC ${utility_HEADERS})
  STRING(REPLACE "utility/" "" LOCAL_INC ${INC})
  SET(LOCAL_HEADERS ${LOCAL_HEADERS} ${LOCAL_INC})
ENDFOREACH()

INSTALL(
  FILES ${LOCAL_HEADERS}
  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/lifev/heart/utility"
  COMPONENT ${PACKAGE_NAME}
)
