SET( XbModels_HEADERS
  XbModels/HeartXbModel.hpp
  XbModels/XbNegroniLascano96.hpp
CACHE INTERNAL "")


SET(LOCAL_HEADERS)
FOREACH(INC ${XbModels_HEADERS})
  STRING(REPLACE "XbModels/" "" LOCAL_INC ${INC})
  SET(LOCAL_HEADERS ${LOCAL_HEADERS} ${LOCAL_INC})
ENDFOREACH()

INSTALL(
  FILES ${LOCAL_HEADERS}
  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/lifev/heart/solver/XbModels"
  COMPONENT ${PACKAGE_NAME}
)
